# py-guiapp-template

./: .gitignore  README.md  guiapp.pyproject  guiapp.spec  setup.cfg  setup.py
guiapp/: __init__.py  __main__.py  main.py
guiapp/ui/: main.py  main.ui
src/guiapp/: __main__.py
src/guiapp/ui/: main.qml
