[metadata]
name = guiapp
version = 0.1
author = Svein Seldal
author_email = sveinse@seldal.com
description = A sample Python GUI project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sveinse/py-guiapp-template
project_urls =
    Bug Tracker = https://github.com/sveinse/py-guiapp-template/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    pyside6
    qt-material
    qt5reactor @ git+ssh://git@github.com/sveinse/qt5reactor@feature-pyside6
    pywin32; platform_system=='Windows'

[options.extras_require]
dev =
    pylint
    flake8
    mypy
    black
test =
    pytest
    coverage
    pytest-cov
install =
    pyinstaller

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    guiapp = guiapp.__main__:main
